--- a/webroot/Blog2/blog.css
+++ b/webroot/Blog2/blog.css
@@ -252,6 +252,14 @@ header .menu-toggle
 	border-top-right-radius: 5px;
 	box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
 }
+.post-slider .post-wrapper .post .Pslider-image
+{
+	width:100%;
+	height:300px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
+}
 
 /*Post slider for portfolio*/
 
