--- a/webroot/Blog2/blog.css
+++ b/webroot/Blog2/blog.css
@@ -274,12 +274,12 @@ header .menu-toggle
 {
 	height: 500px;
 	height:100%;
-	border:1px solid red;
+	
 }
-.Ppost-info
+/* .Ppost-info
 {
-	border:1px solid red;
-}
+	
+} */
 
 /* CONTENT */
 
