--- a/webroot/Blog/blog.css
+++ b/webroot/Blog/blog.css
@@ -388,6 +388,10 @@ header .menu-toggle
 	border: 1px solid #e0e0e0;
 	font-size: 1.2em;
 }
+.content .sidebar .section.topics
+{
+	border:1px solid red;
+}
 .content .sidebar .section.topics ul  /*formatting for list*/
 {
 	
