--- a/webroot/Blog/reset.css
+++ b/webroot/Blog/reset.css
@@ -1,4 +1,4 @@
-		
+/* This file is the reset.css file to override browser formatting */
     html, body, title, header ul, .content .sidebar .section.topics ul, .post, .main-content, .post-clearfloat, .sidebar, .footer, .footer-content, .footer-section.about, .contact, .socials, .footer-list, .footer-section.contact-form, .footer-bottom, .page-wrapper, .post-slider, .post-wrapper, .post-info, .content.clearfloats
 {
     margin:0;
