--- a/webroot/Blog/blog.css
+++ b/webroot/Blog/blog.css
@@ -105,7 +105,7 @@ header *
 
 .DD-content a:hover
 {
-	background-color: blue;
+	background-color: #0b0069;
 }
 
 .DD:hover .DD-content 
@@ -338,6 +338,8 @@ header .menu-toggle
 	height : 500px;	
 	height:100%;
 }
+
+/*End of post slider for portfolio*/
 
 /* CONTENT */
 
@@ -635,8 +637,7 @@ header .menu-toggle
 }
 
 .footer-bottom
-{
-	border:1px solid red;
+{	
 	align-content: center;
 	align-items: center;
 
