--- a/webroot/Blog/blog.css
+++ b/webroot/Blog/blog.css
@@ -290,6 +290,8 @@ header .menu-toggle
 	display: inline-block;
 	background: white; 
 	border-radius: 5px;
+	margin-bottom: 5cm;
+	border: 1px solid red;
 }
 .post-slider .post-wrapper .post .post-info
 {
