--- a/webroot/Blog/blog.css
+++ b/webroot/Blog/blog.css
@@ -552,7 +552,7 @@ header .menu-toggle
 }
 .footer
 {
-	background: rgb(228, 132, 6);
+	background: #f7fa33;
 	color: #d3d3d3;
 	height: 400px;
 	position: relative;
