--- a/webroot/Blog/admin.css
+++ b/webroot/Blog/admin.css
@@ -1,4 +1,4 @@
-/* This file overwrites the styling features for the admin only pages */
+/* This file overwrites the styling features for the admin only pages ie dashboard.php, edit.php and addPost.php*/
 
 
 .admin-wrapper
